--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,10 @@
     <string name="txtViewChooseBusiness">Choose the Business</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hintCardNumber">Please enter your card number</string>
+    <string name="hintCCMonth">Exp Month</string>
+    <string name="hintCCYear">Exp Year</string>
+    <string name="hintCCCVV">cvv</string>
 
 
 </resources>
