--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,13 +55,15 @@
     <string name="Test">teste</string>
     <string name="empr1">empresa 1</string>
     <string name="btnSave">Save</string>
-    <string name="txtViewChooseBusiness">Choose the Business</string>
+    <string name="txtViewChooseBusiness">Choose a Business</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hintCardNumber">Please enter your card number</string>
     <string name="hintCCMonth">Exp Month</string>
     <string name="hintCCYear">Exp Year</string>
     <string name="hintCCCVV">cvv</string>
+    <string name="flexyName">Flexy</string>
+    <string name="copyright">copyright</string>
 
 
 </resources>
